dark mode fixes

--- a/client-side/style.css
+++ b/client-side/style.css
@@ -12,13 +12,57 @@ body.dark {
   background: #292c35;
 }
 
+body.dark .aboutHeader {
+  color: #fff;
+}
+
+body.dark .about-h1 {
+  color: #fff;
+}
+
+body.dark blockquote {
+  color: #fff;
+}
+
+body.dark .help-header-text {
+  color: #fff;
+}
+
+body.dark .appC {
+  color: black;
+}
+
+body.dark .app_card_category {
+  color: #fff;
+}
+
+body.dark .nav-links a {
+  color: orange;
+}
+
+
+
+
+body {
+  transition: background 0.2s linear;
+}
+
+
 .checkbox {
   opacity: 0;
   position: absolute;
 }
 
+.fa-moon {
+  color: #f1c40f;
+}
+
+.fa-sun {
+  color: #f39c12;
+}
+
 .label {
-  background-color: #b1b1b1;
+  background-color: #111;
   border-radius: 50px;
   cursor: pointer;
   display: flex;
@@ -52,7 +96,7 @@ body.dark {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
   color: black;
   margin: 0px;
   padding: 0px;
@@ -779,48 +823,7 @@ input[type="checkbox"] {
   font-family: "Montserra", sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-}
 
-body.dark {
-  background: #292c35;
-}
-
-.checkbox {
-  opacity: 0;
-  position: absolute;
-}
-
-.label {
-  background-color: #111;
-  border-radius: 50px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 5px;
-  position: relative;
-  height: 26px;
-  width: 50px;
-  transform: scale(0.8);
-}
-
-.label .ball {
-  background-color: #fff;
-  border-radius: 50%;
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  height: 22px;
-  width: 22px;
-  transform: translateX(0px);
-  transition: transform 0.2s linear;
-}
-
-.checkbox:checked + .label .ball {
-  transform: translateX(24px);
-}
 
 .businessContent2 {
   display: grid;
@@ -1229,9 +1232,6 @@ blockquote {
   margin-top: 15px;
 }
 
-.input {
-  /* background-color: blue; */
-}
 
 button.primaryContained {
   background: #016ba8;
@@ -1536,7 +1536,7 @@ button.primaryContained:hover {
   padding: 10px;
 }
 .app_card_wrap .app_card_inner {
-  background: white;
+  
   border-radius: 20px;
 }
 
